--- a/src/App.scss
+++ b/src/App.scss
@@ -107,6 +107,9 @@ nav {
 .welcome {
   width: 100%;
   min-height: 100dvh;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
   .hero {
     width: 100%;
     height: 100dvh;
@@ -147,6 +150,7 @@ nav {
     width: 100%;
     height: 100%;
     position: absolute;
+    cursor: grab;
     img {
       height: 100%;
       width: 100%;
@@ -159,14 +163,40 @@ nav {
 
   .details {
     margin-top: auto;
-    height: 300px;
+    margin-bottom: 40px;
     width: 40%;
     margin-left: 10%;
     display: flex;
     flex-direction: column;
     gap: 12px;
+    z-index: 2;
     .title {
-      font-size: 48px;
+      font-size: 52px;
+    }
+    .info {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      .quality {
+        padding: 4px;
+        text-transform: uppercase;
+        background: $orange-peel;
+        border-radius: 4px;
+        color: $black;
+        font-weight: 600;
+      }
+    }
+    .links {
+      display: flex;
+      gap: 12px;
+      .watch {
+        padding: 12px;
+        border-radius: 4px;
+        // background: linear-gradient(to left,$orange-peel, transparent);
+        background-color: $orange-peel;
+        color: $night ;
+        font-weight: 600;
+      }
     }
   }
 }
