--- a/src/App.scss
+++ b/src/App.scss
@@ -143,6 +143,20 @@ nav {
   }
 }
 
+.welcome::after {
+  content: "";
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100dvh;
+  background: url("https://s3.bunnycdn.ru/assets/t10/s2/images/intro.jpg");
+  background-size: cover;
+  background-position: fixed;
+  background-repeat: no-repeat;
+  z-index: -1;
+  filter: brightness(20%);
+}
 
 .caro_item {
   height: 100%;
@@ -216,20 +230,6 @@ nav {
 
 
 
-.welcome::after {
-  content: "";
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100dvh;
-  background: url("https://s3.bunnycdn.ru/assets/t10/s2/images/intro.jpg");
-  background-size: cover;
-  background-position: fixed;
-  background-repeat: no-repeat;
-  z-index: -1;
-  filter: brightness(20%);
-}
 
 
 
@@ -240,7 +240,8 @@ nav {
   flex-direction: column;
   padding: 12px;
   max-width: 1200px;
-  border-radius: 4px;
+  box-shadow: 0px 0px 10px black;
+
   .title {
     display: flex;
     font-size: 32px;
@@ -261,13 +262,13 @@ nav {
     border-radius: 4px;
     height: 252px;
     aspect-ratio: 9/12;
-    outline: 2px solid red;
+    outline: 2px solid $black;
     position: relative;
     isolation: isolate;
     display: flex;
     flex-direction: column;
     padding: 4px;
-    background-color: green;
+    background-color: $night;
     a {
       cursor: alias;
     }
@@ -281,20 +282,44 @@ nav {
       top: 0;
       z-index: -1;
       mask-image: linear-gradient(to bottom,
-      black,transparent);
+      black,  transparent);
       -webkit-mask-image: linear-gradient(to bottom,
-      black,transparent);
+       black,   transparent 90%);
     }
     .movie_title {
       font-size: 14px;
       margin-top: auto;
+      display: flex;
+      flex-direction: column;
+      width: fit-content;
+      
+    }
+    .movie_title::after {
+      content: "";
+      height: 1px;
+      background-color: grey;
+      width: 80%;
+      margin: 5px;
+      left: 0;
     }
     .movie_info {
       display: flex;
       align-items: center;
-      gap: 4px;
+      gap: 8px;
+      font-size: 12px;
+      
+      .lang {
+        text-transform: uppercase;
+        background-color: $orange-peel;
+        border-radius: 2px;
+        padding: 2px;
+        color: black;
+        font-weight: 600;
+        
+      }
       
     }
+    transition: $transition--speed ease;
   }
   .card:hover {
     outline: 2px solid $orange-peel;
@@ -306,4 +331,9 @@ nav {
   width: 100%;
   display: flex;
   justify-content: center;
+}
+
+
+.search {
+  margin-top: 100px;
 }
