--- a/src/App.scss
+++ b/src/App.scss
@@ -86,6 +86,13 @@ nav {
       a {
         text-transform: capitalize;
         position: relative;
+        transition: $transition--speed;
+        padding: 2px;
+        border-radius: 4px;
+      }
+      a:hover {
+        background-color: $moonstone;
+        color: black;
       }
 
       a::after {
@@ -346,4 +353,33 @@ nav {
 
 .movie {
   background-color: $night;
+}
+
+.pagination {
+  display: flex;
+  gap: 12px;
+  align-items: center;
+  align-self: center;
+  padding-bottom: 24px;
+  // background-color: red;
+  .number {
+    font-size: 24px;
+  }
+  button {
+    border-radius: 2px;
+    background: $orange-peel;
+    outline: none;
+    border: none;
+    padding: 4px;
+    display: grid;
+    place-items: center;
+    height: 32px;
+    aspect-ratio: 1/1;
+    cursor: pointer;
+    transition: 0.2s ease;  
+  }
+
+  button:hover {
+    background-color: $yinmn-blue;
+  }
 }
