--- a/src/App.scss
+++ b/src/App.scss
@@ -383,3 +383,22 @@ nav {
     background-color: $yinmn-blue;
   }
 }
+
+
+.video_page {
+  margin-top: 60px;
+
+  iframe {
+    background-color: red;
+    width: 100%;
+    padding: 4px;
+    height: 100%;
+    max-width: 1100px;
+  }
+  .vid_cont {
+    height: 600px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
