--- a/src/App.scss
+++ b/src/App.scss
@@ -9,7 +9,13 @@ $night: hsla(0, 0%, 4%, 1);
 $transition--speed: 0.4s;
 
 
-
+// * {
+//   flex-wrap: wrap;
+// }
+.spinner {
+  // background-color: red;
+  height: 40px;
+}
 .head_room {
   padding-top: 100px;
 }
@@ -73,7 +79,6 @@ nav {
           stroke: $orange-peel;
         }
       }
-      
     }
     .search_box:focus-within {
       outline: 1px solid $orange-peel;
@@ -150,7 +155,6 @@ nav {
       .swipe {
         width: 100%;
         height: 100%;
-        
       }
     }
   }
@@ -188,8 +192,8 @@ nav {
       width: 100%;
       object-fit: cover;
       // filter: brightness(70%);
-      mask-image: linear-gradient( to left,rgba(0, 0, 0, 1), transparent);
-      -webkit-mask-image: linear-gradient( to left,rgba(0, 0, 0, 1), transparent);
+      mask-image: linear-gradient(to left, rgba(0, 0, 0, 1), transparent);
+      -webkit-mask-image: linear-gradient(to left, rgba(0, 0, 0, 1), transparent);
     }
   }
 
@@ -201,7 +205,7 @@ nav {
     flex-direction: column;
     gap: 12px;
     z-index: 2;
-    
+
     .title {
       font-size: 38px;
     }
@@ -234,17 +238,12 @@ nav {
         border-radius: 4px;
         // background: linear-gradient(to left,$orange-peel, transparent);
         background-color: $orange-peel;
-        color: $night ;
+        color: $night;
         font-weight: 600;
       }
     }
   }
 }
-
-
-
-
-
 
 .list {
   width: 100%;
@@ -270,7 +269,6 @@ nav {
     margin-top: 24px;
   }
 
-
   .card {
     border-radius: 4px;
     height: 252px;
@@ -294,10 +292,8 @@ nav {
       left: 0;
       top: 0;
       z-index: -1;
-      mask-image: linear-gradient(to bottom,
-      black,  transparent);
-      -webkit-mask-image: linear-gradient(to bottom,
-       black,   transparent 90%);
+      mask-image: linear-gradient(to bottom, black, transparent);
+      -webkit-mask-image: linear-gradient(to bottom, black, transparent 90%);
     }
     .movie_title {
       font-size: 14px;
@@ -305,7 +301,6 @@ nav {
       display: flex;
       flex-direction: column;
       width: fit-content;
-      
     }
     .movie_title::after {
       content: "";
@@ -320,7 +315,7 @@ nav {
       align-items: center;
       gap: 8px;
       font-size: 12px;
-      
+
       .lang {
         text-transform: uppercase;
         background-color: $orange-peel;
@@ -328,16 +323,13 @@ nav {
         padding: 2px;
         color: black;
         font-weight: 600;
-        
       }
-      
     }
     transition: $transition--speed ease;
   }
   .card:hover {
     outline: 2px solid $orange-peel;
   }
-
 }
 
 .container {
@@ -346,9 +338,20 @@ nav {
   justify-content: center;
 }
 
-
 .search {
   margin-top: 100px;
+  .spin {
+    width: 100%;
+    background-color: $night;
+    padding: 12px 0;
+  }
+  .pagin {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 24px;
+  }
+    
 }
 
 .movie {
@@ -376,14 +379,13 @@ nav {
     height: 32px;
     aspect-ratio: 1/1;
     cursor: pointer;
-    transition: 0.2s ease;  
+    transition: 0.2s ease;
   }
 
   button:hover {
     background-color: $yinmn-blue;
   }
 }
-
 
 .video_page {
   margin-top: 60px;
@@ -446,15 +448,126 @@ nav {
   }
 }
 
+.series {
+  display: flex;
+  flex-direction: column;
+  margin-top: 72px;
+  .info {
+    display: flex;
+    width: 100%;
+    max-width: 1100px;
+    align-self: center;
+    background-color: $night;
+    margin: 0 12px;
+    border-radius: 12px;
+    padding: 12px;
+    gap: 22px;
+    img {
+      height: 400px;
+      border-radius: 8px;
+    }
+
+    .details {
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+      .runtime {
+        display: flex;
+        align-items: center;
+        gap: 12px;
+        font-size: 14px;
+        .lang {
+          padding: 4px;
+          background: $orange-peel;
+          border-radius: 4px;
+          color: black;
+        }
+      }
+      .title_info {
+        display: flex;
+        gap: 12px;
+        align-items: center;
+        .date {
+          padding: 0 12px;
+          border-left: 1px solid $orange-peel;
+        }
+      }
+      .genres {
+        display: flex;
+        gap: 8px;
+        .genre {
+          cursor: pointer;
+          padding: 4px;
+          background-color: $tea-green;
+          color: black;
+          border-radius: 4px;
+          font-size: 12px;
+        }
+      }
+      .title {
+        font-size: 32px;
+      }
+      .desc {
+        font-size: 14px;
+      }
+      .episode_list {
+        display: flex;
+        flex-direction: column;
+        gap:12px;
+        flex-wrap: wrap;
+      }
+      .epi_list {
+        display: flex;
+        gap: 8px;
+        padding: 4px;
+        flex-wrap: wrap;
+        align-items: center;
+        a {
+          background-color: $tea-green;
+          color: black;
+          padding: 8px;
+          border-radius: 4px;
+        }
+      }
+      .season {
+        display: flex;
+        gap: 8px;
+        flex-wrap: wrap;
+        align-items: center;
+        .season_btn {
+          background-color: $yinmn-blue;
+          
+        }
+        .season_active {
+          
+          aspect-ratio: 1/1;
+          background-color: $orange-peel;
+        }
+
+        .season_btn,.season_active {
+          padding: 8px;
+          border-radius: 2px;
+          cursor: pointer;
+        }
+      }
+    }
+  }
+}
 
 @media screen and (max-width: 500px) {
-  
   .video_page {
     .details {
-      .movie_title{
+      .movie_title {
         font-size: 32px;
       }
     }
   }
-  
+
+  .card {
+    height: 220px;
+    width: 160px;
+    .movie_title {
+      font-size: 10px !important  ;
+    }
+  }
 }
