--- a/src/App.scss
+++ b/src/App.scss
@@ -46,6 +46,43 @@ nav {
   background: linear-gradient(to bottom, rgba($color: $black, $alpha: 0.9) 30%, rgba($color: $black, $alpha: 0));
   z-index: 10;
 
+  .side_bar {
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100vh;
+    width: 100%;
+    background-color: $night;
+    display: grid;
+    place-items: center;
+    transform: translateY(-120vh);
+    z-index: 5;
+    transition: $transition--speed ease;
+    display: none;
+    .side_content {
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+      font-size: 22px;
+      
+      a.active {
+        color: $orange-peel;
+      }
+    }
+  }
+  .ham  {
+    display: none;
+    z-index: 10;
+  }
+  .mobile_logo {
+    display: grid;
+    place-items: center;
+    width: 30px;
+    display: none;
+    img {
+      width: 100%;
+    }
+  }
   .content {
     display: flex;
     align-items: center;
@@ -55,6 +92,14 @@ nav {
     max-width: 1100px;
     padding: 0 4px;
     flex-shrink: 0;
+
+    .logo {
+      // background-color: red;
+      width: 120px;
+      img {
+        width: 100%;
+      }
+    }
     .search_box {
       display: flex;
       background-color: rgba($color: $black, $alpha: 0.8);
@@ -594,6 +639,29 @@ nav {
 }
 
 @media screen and (max-width: 500px) {
+  nav {
+    .side_bar {
+      display: grid;
+    }
+    .ham {display: block;}
+    .mobile_logo {
+      display: grid;
+      z-index: 10;
+      img {
+        height: 100%;
+        width: 100%;
+      }
+    }
+    .content {
+      gap: 12px;
+      .logo{
+        display: none;
+      }
+      .links {
+        display: none;
+      }
+    }
+  }
   .video_page {
     .details {
       .movie_title {
